--- a/get_teams_traditional_stats.ipynb
+++ b/get_teams_traditional_stats.ipynb
@@ -9,11 +9,178 @@
     "#Import Libs\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import os\n",
-    "import missingno as msno"
+    "import requests\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "JSONDecodeError",
+     "evalue": "Expecting value: line 1 column 1 (char 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-fcd6467a1ddd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    102\u001b[0m }\n\u001b[0;32m    103\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 104\u001b[1;33m \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl_base\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mparameters\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mheaders\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    105\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    106\u001b[0m \u001b[1;31m# transform contents into dataframe\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\arthu\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\requests\\models.py\u001b[0m in \u001b[0;36mjson\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m    898\u001b[0m                     \u001b[1;31m# used.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    899\u001b[0m                     \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 900\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mcomplexjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    901\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    902\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\arthu\\AppData\\Local\\Programs\\Python\\Python38\\lib\\json\\__init__.py\u001b[0m in \u001b[0;36mloads\u001b[1;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[0;32m    355\u001b[0m             \u001b[0mparse_int\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mparse_float\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    356\u001b[0m             parse_constant is None and object_pairs_hook is None and not kw):\n\u001b[1;32m--> 357\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_default_decoder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    358\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    359\u001b[0m         \u001b[0mcls\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mJSONDecoder\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\arthu\\AppData\\Local\\Programs\\Python\\Python38\\lib\\json\\decoder.py\u001b[0m in \u001b[0;36mdecode\u001b[1;34m(self, s, _w)\u001b[0m\n\u001b[0;32m    335\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    336\u001b[0m         \"\"\"\n\u001b[1;32m--> 337\u001b[1;33m         \u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mraw_decode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0midx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0m_w\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    338\u001b[0m         \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_w\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    339\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\arthu\\AppData\\Local\\Programs\\Python\\Python38\\lib\\json\\decoder.py\u001b[0m in \u001b[0;36mraw_decode\u001b[1;34m(self, s, idx)\u001b[0m\n\u001b[0;32m    353\u001b[0m             \u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscan_once\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0midx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    354\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 355\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mJSONDecodeError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Expecting value\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    356\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mJSONDecodeError\u001b[0m: Expecting value: line 1 column 1 (char 0)"
+     ]
+    }
+   ],
+   "source": [
+    "#Get team's stats with NBA's API \n",
+    "\n",
+    "url_base = 'https://www.nba.com/stats/teams/boxscores-traditional'\n",
+    "\n",
+    "headers = {\n",
+    "\t\t'Host': 'stats.nba.com',\n",
+    "\t\t'Connection': 'keep-alive',\n",
+    "\t\t'Accept': 'application/json, text/plain, */*',\n",
+    "\t\t'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.130 Safari/537.36',\n",
+    "\t\t'Referer': 'https://stats.nba.com/',\n",
+    "\t\t\"x-nba-stats-origin\": \"stats\",\n",
+    "\t\t\"x-nba-stats-token\": \"true\",\n",
+    "\t\t'Accept-Encoding': 'gzip, deflate, br',\n",
+    "\t\t'Accept-Language': 'en-US,en;q=0.9',\n",
+    "\t}\n",
+    "\n",
+    "columns_list = ['SEASON_YEAR',\n",
+    "                'TEAM_ID',\n",
+    "                'TEAM_ABBREVIATION',\n",
+    "                'TEAM_NAME',\n",
+    "                'GAME_ID',\n",
+    "                'GAME_DATE',\n",
+    "                'MATCHUP',\n",
+    "                'WL',\n",
+    "                'MIN',\n",
+    "                'FGM',\n",
+    "                'FGA',\n",
+    "                'FG_PCT',\n",
+    "                'FG3M',\n",
+    "                'FG3A',\n",
+    "                'FG3_PCT',\n",
+    "                'FTM',\n",
+    "                'FTA',\n",
+    "                'FT_PCT',\n",
+    "                'OREB',\n",
+    "                'DREB',\n",
+    "                'REB',\n",
+    "                'AST',\n",
+    "                'TOV',\n",
+    "                'STL',\n",
+    "                'BLK',\n",
+    "                'BLKA',\n",
+    "                'PF',\n",
+    "                'PFD',\n",
+    "                'PTS',\n",
+    "                'PLUS_MINUS',\n",
+    "                'GP_RANK',\n",
+    "                'W_RANK',\n",
+    "                'L_RANK',\n",
+    "                'W_PCT_RANK',\n",
+    "                'MIN_RANK',\n",
+    "                'FGM_RANK',\n",
+    "                'FGA_RANK',\n",
+    "                'FG_PCT_RANK',\n",
+    "                'FG3M_RANK',\n",
+    "                'FG3A_RANK',\n",
+    "                'FG3_PCT_RANK',\n",
+    "                'FTM_RANK',\n",
+    "                'FTA_RANK',\n",
+    "                'FT_PCT_RANK',\n",
+    "                'OREB_RANK',\n",
+    "                'DREB_RANK',\n",
+    "                'REB_RANK',\n",
+    "                'AST_RANK',\n",
+    "                'TOV_RANK',\n",
+    "                'STL_RANK',\n",
+    "                'BLK_RANK',\n",
+    "                'BLKA_RANK',\n",
+    "                'PF_RANK',\n",
+    "                'PFD_RANK',\n",
+    "                'PTS_RANK',\n",
+    "                'PLUS_MINUS_RANK',\n",
+    "                'TeamGameLogs']\n",
+    "\n",
+    "dfs=[]\n",
+    "\n",
+    "#for i in teams_ids:\n",
+    "\n",
+    "parameters = {\n",
+    "    'DateFrom': '',\n",
+    "    'DateTo': '',\n",
+    "    'GameSegment': '',\n",
+    "    'LastNGames': 0,\n",
+    "    \"LeagueID\": \"00\",\n",
+    "    'Location': '',\n",
+    "    'MeasureType': \"Base\",\n",
+    "    'Month': 0,\n",
+    "    'OppTeamID' :0,\n",
+    "    'Outcome': '',\n",
+    "    'PORound': 0,\n",
+    "    'PerMode': \"Totals\",\n",
+    "    'Period': 0,\n",
+    "    'PlayerID': '',\n",
+    "    'SeasonSegment' : '',\n",
+    "    'SeasonType': \"Regular Season\",\n",
+    "    'SeasonYear': \"2022-23\",\n",
+    "    'ShotClockRange': '',  \n",
+    "    'TeamID': '1610612744',\n",
+    "    'VsConference': '',\n",
+    "    'VsDivision': ''\t\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url_base, params=parameters, headers=headers).json()\n",
+    "\n",
+    "# transform contents into dataframe\n",
+    "#results = response['resultSets'][0]['rowSet']\n",
+    "#df = pd.DataFrame(results, columns=columns_list)\n",
+    "#dfs.append(df)\n",
+    "#print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "404"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "headers  = {\n",
+    "    'Connection': 'keep-alive',\n",
+    "    'Accept': 'application/json, text/plain, */*',\n",
+    "    'x-nba-stats-token': 'true',\n",
+    "    'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.130 Safari/537.36',\n",
+    "    'x-nba-stats-origin': 'stats',\n",
+    "    'Sec-Fetch-Site': 'same-origin',\n",
+    "    'Sec-Fetch-Mode': 'cors',\n",
+    "    'Referer': 'https://stats.nba.com/',\n",
+    "    'Accept-Encoding': 'gzip, deflate, br',\n",
+    "    'Accept-Language': 'en-US,en;q=0.9',\n",
+    "}\n",
+    "\n",
+    "url_base = 'https://stats.nba.com/stats/teams/boxscores-traditional?SeasonType=Regular+Season&OpponentTeamID=1610612744'\n",
+    "\n",
+    "response = requests.get(url_base, headers=headers)\n",
+    "\n",
+    "response.status_code"
    ]
   },
   {
@@ -22,8 +189,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get game stats with NBA's API\n",
-    "\n"
+    "# Write file to xlsx\n",
+    "final_dfs = pd.concat(dfs, sort=False)\n",
+    "final_dfs.head()\n",
+    "final_dfs.to_excel(\"nba_game_stats_2022-23.xlsx\")"
    ]
   }
  ],
