--- a/test_bench.ipynb
+++ b/test_bench.ipynb
@@ -132,21 +132,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>44</th>\n",
+       "      <th>45</th>\n",
+       "      <th>46</th>\n",
+       "      <th>47</th>\n",
+       "      <th>48</th>\n",
+       "      <th>49</th>\n",
+       "      <th>50</th>\n",
+       "      <th>51</th>\n",
+       "      <th>52</th>\n",
+       "      <th>53</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1610612743</td>\n",
+       "      <td>Denver Nuggets</td>\n",
+       "      <td>82</td>\n",
+       "      <td>53</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0.646</td>\n",
+       "      <td>48.2</td>\n",
+       "      <td>43.6</td>\n",
+       "      <td>86.4</td>\n",
+       "      <td>0.504</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 54 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "200"
+       "           0               1   2   3   4      5     6     7     8      9   \\\n",
+       "0  1610612743  Denver Nuggets  82  53  29  0.646  48.2  43.6  86.4  0.504   \n",
+       "\n",
+       "   ...  44  45  46  47  48  49  50  51  52  53  \n",
+       "0  ...   1   1   1   1   1   1   1   1   1   1  \n",
+       "\n",
+       "[1 rows x 54 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
     "headers  = {\n",
     "    'Connection': 'keep-alive',\n",
     "    'Accept': 'application/json, text/plain, */*',\n",
@@ -172,20 +254,16 @@
     "            'Sorter': \"DATE\",\n",
     "            }\n",
     "\n",
-    "url_base = 'https://www.nba.com/stats/teams/boxscores'\n",
+    "url_base = 'https://stats.nba.com/stats/leaguedashteamstats?Conference=&DateFrom=&DateTo=&Division=&GameScope=&GameSegment=&Height=&LastNGames=0&LeagueID=00&Location=&MeasureType=Base&Month=0&OpponentTeamID=0&Outcome=&PORound=0&PaceAdjust=N&PerMode=PerGame&Period=0&PlayerExperience=&PlayerPosition=&PlusMinus=N&Rank=N&Season=2022-23&SeasonSegment=&SeasonType=Regular%20Season&ShotClockRange=&StarterBench=&TeamID=1610612743&TwoWay=0&VsConference=&VsDivision='\n",
     "\n",
     "response = requests.get(url_base, params=parameters, headers=headers)\n",
     "\n",
-    "response.status_code\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = response.json()"
+    "response.status_code\n",
+    "\n",
+    "response = response.json()\n",
+    "games_info = response['resultSets'][0]['rowSet']\n",
+    "df = pd.DataFrame(games_info)\n",
+    "df\n"
    ]
   },
   {
