--- a/test_bench.ipynb
+++ b/test_bench.ipynb
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1129,21 +1129,6 @@
       "2017-10-18\n",
       "2017-10-17\n"
      ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[46], line 110\u001b[0m\n\u001b[0;32m    106\u001b[0m     dfs\u001b[39m.\u001b[39mappend(df) \n\u001b[0;32m    108\u001b[0m final_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat(dfs)\n\u001b[1;32m--> 110\u001b[0m final_df \u001b[39m=\u001b[39m final_df\u001b[39m.\u001b[39;49mrename(columns\u001b[39m=\u001b[39;49mcolumns_list)\n\u001b[0;32m    112\u001b[0m final_df\u001b[39m.\u001b[39mto_excel(\u001b[39m'\u001b[39m\u001b[39mtest.xlsx\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\arthu\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\frame.py:5432\u001b[0m, in \u001b[0;36mDataFrame.rename\u001b[1;34m(self, mapper, index, columns, axis, copy, inplace, level, errors)\u001b[0m\n\u001b[0;32m   5313\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrename\u001b[39m(\n\u001b[0;32m   5314\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[0;32m   5315\u001b[0m     mapper: Renamer \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   5323\u001b[0m     errors: IgnoreRaise \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   5324\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m DataFrame \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   5325\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   5326\u001b[0m \u001b[39m    Rename columns or index labels.\u001b[39;00m\n\u001b[0;32m   5327\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   5430\u001b[0m \u001b[39m    4  3  6\u001b[39;00m\n\u001b[0;32m   5431\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 5432\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m_rename(\n\u001b[0;32m   5433\u001b[0m         mapper\u001b[39m=\u001b[39;49mmapper,\n\u001b[0;32m   5434\u001b[0m         index\u001b[39m=\u001b[39;49mindex,\n\u001b[0;32m   5435\u001b[0m         columns\u001b[39m=\u001b[39;49mcolumns,\n\u001b[0;32m   5436\u001b[0m         axis\u001b[39m=\u001b[39;49maxis,\n\u001b[0;32m   5437\u001b[0m         copy\u001b[39m=\u001b[39;49mcopy,\n\u001b[0;32m   5438\u001b[0m         inplace\u001b[39m=\u001b[39;49minplace,\n\u001b[0;32m   5439\u001b[0m         level\u001b[39m=\u001b[39;49mlevel,\n\u001b[0;32m   5440\u001b[0m         errors\u001b[39m=\u001b[39;49merrors,\n\u001b[0;32m   5441\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Users\\arthu\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\generic.py:1034\u001b[0m, in \u001b[0;36mNDFrame._rename\u001b[1;34m(self, mapper, index, columns, axis, copy, inplace, level, errors)\u001b[0m\n\u001b[0;32m   1027\u001b[0m         missing_labels \u001b[39m=\u001b[39m [\n\u001b[0;32m   1028\u001b[0m             label\n\u001b[0;32m   1029\u001b[0m             \u001b[39mfor\u001b[39;00m index, label \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(replacements)\n\u001b[0;32m   1030\u001b[0m             \u001b[39mif\u001b[39;00m indexer[index] \u001b[39m==\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[0;32m   1031\u001b[0m         ]\n\u001b[0;32m   1032\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mmissing_labels\u001b[39m}\u001b[39;00m\u001b[39m not found in axis\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m-> 1034\u001b[0m new_index \u001b[39m=\u001b[39m ax\u001b[39m.\u001b[39;49m_transform_index(f, level\u001b[39m=\u001b[39;49mlevel)\n\u001b[0;32m   1035\u001b[0m result\u001b[39m.\u001b[39m_set_axis_nocheck(new_index, axis\u001b[39m=\u001b[39maxis_no, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, copy\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m   1036\u001b[0m result\u001b[39m.\u001b[39m_clear_item_cache()\n",
-      "File \u001b[1;32mc:\\Users\\arthu\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:6207\u001b[0m, in \u001b[0;36mIndex._transform_index\u001b[1;34m(self, func, level)\u001b[0m\n\u001b[0;32m   6205\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39mfrom_arrays(values)\n\u001b[0;32m   6206\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 6207\u001b[0m     items \u001b[39m=\u001b[39m [func(x) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m]\n\u001b[0;32m   6208\u001b[0m     \u001b[39mreturn\u001b[39;00m Index(items, name\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname, tupleize_cols\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\arthu\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:6207\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m   6205\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39mfrom_arrays(values)\n\u001b[0;32m   6206\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 6207\u001b[0m     items \u001b[39m=\u001b[39m [func(x) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m]\n\u001b[0;32m   6208\u001b[0m     \u001b[39mreturn\u001b[39;00m Index(items, name\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname, tupleize_cols\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
-     ]
     }
    ],
    "source": [
@@ -1176,62 +1161,62 @@
     "            'Sorter': \"DATE\",\n",
     "            }\n",
     "\n",
-    "columns_list = [\n",
-    "                \"TEAM_ID\", \n",
-    "                \"TEAM_NAME\",\n",
-    "                \"GP\",\n",
-    "                \"W\",\n",
-    "                \"L\",\n",
-    "                \"W_PCT\",\n",
-    "                \"MIN\",\n",
-    "                \"FGM\",\n",
-    "                \"FGA\",\n",
-    "                \"FG_PCT\",\n",
-    "                \"FG3M\",\n",
-    "                \"FG3A\",\n",
-    "                \"FG3_PCT\",\n",
-    "                \"FTM\",\n",
-    "                \"FTA\",\n",
-    "                \"FT_PCT\",\n",
-    "                \"OREB\",\n",
-    "                \"DREB\",\n",
-    "                \"REB\",\n",
-    "                \"AST\",\n",
-    "                \"TOV\",\n",
-    "                \"STL\",\n",
-    "                \"BLK\",\n",
-    "                \"BLKA\",\n",
-    "                \"PF\",\n",
-    "                \"PFD\",\n",
-    "                \"PTS\",\n",
-    "                \"PLUS_MINUS\",\n",
-    "                \"GP_RANK\",\n",
-    "                \"W_RANK\",\n",
-    "                \"L_RANK\",\n",
-    "                \"W_PCT_RANK\",\n",
-    "                \"MIN_RANK\",\n",
-    "                \"FGM_RANK\",\n",
-    "                \"FGA_RANK\",\n",
-    "                \"FG_PCT_RANK\",\n",
-    "                \"FG3M_RANK\",\n",
-    "                \"FG3A_RANK\",\n",
-    "                \"FG3_PCT_RANK\",\n",
-    "                \"FTM_RANK\",\n",
-    "                \"FTA_RANK\",\n",
-    "                \"FT_PCT_RANK\",\n",
-    "                \"OREB_RANK\",\n",
-    "                \"DREB_RANK\",\n",
-    "                \"REB_RANK\",\n",
-    "                \"AST_RANK\",\n",
-    "                \"TOV_RANK\",\n",
-    "                \"STL_RANK\",\n",
-    "                \"BLK_RANK\",\n",
-    "                \"BLKA_RANK\",\n",
-    "                \"PF_RANK\",\n",
-    "                \"PFD_RANK\",\n",
-    "                \"PTS_RANK\",\n",
-    "                \"PLUS_MINUS_RANK\"\n",
-    "                ]\n",
+    "columns_list = {\n",
+    "                0:\"TEAM_ID\", \n",
+    "                1:\"TEAM_NAME\",\n",
+    "                2:\"GP\",\n",
+    "                3:\"W\",\n",
+    "                4:\"L\",\n",
+    "                5:\"W_PCT\",\n",
+    "                6:\"MIN\",\n",
+    "                7:\"FGM\",\n",
+    "                8:\"FGA\",\n",
+    "                9:\"FG_PCT\",\n",
+    "                10:\"FG3M\",\n",
+    "                11:\"FG3A\",\n",
+    "                12:\"FG3_PCT\",\n",
+    "                13:\"FTM\",\n",
+    "                14:\"FTA\",\n",
+    "                15:\"FT_PCT\",\n",
+    "                16:\"OREB\",\n",
+    "                17:\"DREB\",\n",
+    "                18:\"REB\",\n",
+    "                19:\"AST\",\n",
+    "                20:\"TOV\",\n",
+    "                21:\"STL\",\n",
+    "                22:\"BLK\",\n",
+    "                23:\"BLKA\",\n",
+    "                24:\"PF\",\n",
+    "                25:\"PFD\",\n",
+    "                26:\"PTS\",\n",
+    "                27:\"PLUS_MINUS\",\n",
+    "                28:\"GP_RANK\",\n",
+    "                29:\"W_RANK\",\n",
+    "                30:\"L_RANK\",\n",
+    "                31:\"W_PCT_RANK\",\n",
+    "                32:\"MIN_RANK\",\n",
+    "                33:\"FGM_RANK\",\n",
+    "                34:\"FGA_RANK\",\n",
+    "                35:\"FG_PCT_RANK\",\n",
+    "                36:\"FG3M_RANK\",\n",
+    "                37:\"FG3A_RANK\",\n",
+    "                38:\"FG3_PCT_RANK\",\n",
+    "                39:\"FTM_RANK\",\n",
+    "                40:\"FTA_RANK\",\n",
+    "                41:\"FT_PCT_RANK\",\n",
+    "                42:\"OREB_RANK\",\n",
+    "                43:\"DREB_RANK\",\n",
+    "                44:\"REB_RANK\",\n",
+    "                45:\"AST_RANK\",\n",
+    "                46:\"TOV_RANK\",\n",
+    "                47:\"STL_RANK\",\n",
+    "                48:\"BLK_RANK\",\n",
+    "                49:\"BLKA_RANK\",\n",
+    "                50:\"PF_RANK\",\n",
+    "                51:\"PFD_RANK\",\n",
+    "                52:\"PTS_RANK\",\n",
+    "                53:\"PLUS_MINUS_RANK\"\n",
+    "                }\n",
     "\n",
     "game_dates = pd.read_excel('box_scores_Regular+Season.xlsx')\n",
     "game_dates = game_dates['GAME_DATE']\n",
@@ -2316,7 +2301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
