--- a/test_bench.ipynb
+++ b/test_bench.ipynb
@@ -1321,6 +1321,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "df = pd.read_excel('games.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2461    22101223\n",
+       "2523    22101198\n",
+       "2538    22101193\n",
+       "2585    22101166\n",
+       "2611    22101153\n",
+       "          ...   \n",
+       "4794    22100056\n",
+       "4825    22100041\n",
+       "4851    22100037\n",
+       "4884    22100020\n",
+       "4897    22100005\n",
+       "Name: GAME_ID, Length: 82, dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_id = 1610612738\n",
+    "season = '2021-22'\n",
+    "df['GAME_ID'][(df['season_id'] == season) & (df['TEAM_ID'] == team_id)]\n",
+    "#df[df['TEAM_ID'] == team_id]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
