--- a/test_bench.ipynb
+++ b/test_bench.ipynb
@@ -1923,34 +1923,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "stats = pd.read_excel('alo.xlsx')\n",
     "games = pd.read_excel('games_list_Regular+Season.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>SEASON_ID</th>\n",
+       "      <th>TEAM_ID</th>\n",
+       "      <th>TEAM_ABBREVIATION</th>\n",
+       "      <th>TEAM_NAME</th>\n",
+       "      <th>GAME_ID</th>\n",
+       "      <th>GAME_DATE</th>\n",
+       "      <th>MATCHUP</th>\n",
+       "      <th>WL</th>\n",
+       "      <th>MIN</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>STL</th>\n",
+       "      <th>BLK</th>\n",
+       "      <th>TOV</th>\n",
+       "      <th>PF</th>\n",
+       "      <th>PTS</th>\n",
+       "      <th>PLUS_MINUS</th>\n",
+       "      <th>VIDEO_AVAILABLE</th>\n",
+       "      <th>season_id</th>\n",
+       "      <th>GAME_N</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6165</th>\n",
+       "      <td>6165</td>\n",
+       "      <td>22022</td>\n",
+       "      <td>1610612766</td>\n",
+       "      <td>CHA</td>\n",
+       "      <td>Charlotte Hornets</td>\n",
+       "      <td>22200732</td>\n",
+       "      <td>2023-01-26</td>\n",
+       "      <td>CHA vs. CHI</td>\n",
+       "      <td>W</td>\n",
+       "      <td>240</td>\n",
+       "      <td>...</td>\n",
+       "      <td>24</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>16</td>\n",
+       "      <td>19</td>\n",
+       "      <td>111</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-23</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 32 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'WAS @ IND'"
+       "      Unnamed: 0  SEASON_ID     TEAM_ID TEAM_ABBREVIATION          TEAM_NAME  \\\n",
+       "6165        6165      22022  1610612766               CHA  Charlotte Hornets   \n",
+       "\n",
+       "       GAME_ID   GAME_DATE      MATCHUP WL  MIN  ...  AST  STL  BLK  TOV  PF  \\\n",
+       "6165  22200732  2023-01-26  CHA vs. CHI  W  240  ...   24    8    5   16  19   \n",
+       "\n",
+       "      PTS  PLUS_MINUS  VIDEO_AVAILABLE  season_id  GAME_N  \n",
+       "6165  111          15                1    2022-23      50  \n",
+       "\n",
+       "[1 rows x 32 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "games.loc[0]['MATCHUP']"
+    "game = 22200732\n",
+    "df_home = games.loc[games['GAME_ID'] == game]\n",
+    "df_home = df_home[df_home['MATCHUP'].str.contains('vs.')]\n",
+    "df_home"
    ]
   },
   {
@@ -2405,7 +2488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
