--- a/test_bench.ipynb
+++ b/test_bench.ipynb
@@ -2409,6 +2409,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7059/7059 [00:09<00:00, 766.84it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import tqdm\n",
+    "\n",
+    "teams_stats = pd.read_excel('team_stats.xlsx')\n",
+    "games = pd.read_excel('games_list_Regular+Season.xlsx')\n",
+    "\n",
+    "games_ids = games['GAME_ID']\n",
+    "games_ids.drop_duplicates(inplace=True)\n",
+    "\n",
+    "df_h = []\n",
+    "df_a = []\n",
+    "\n",
+    "for game in tqdm.tqdm(games_ids):\n",
+    "    df = games.loc[games['GAME_ID'] == game]\n",
+    "    df_home = df[df['MATCHUP'].str.contains('vs.')]\n",
+    "    df_home = df_home.iloc[0]\n",
+    "    df_away = df[df['MATCHUP'].str.contains('@')]\n",
+    "    df_away = df_away.iloc[0]\n",
+    "    df_h.append(df_home)\n",
+    "    df_a.append(df_away)\n",
+    "\n",
+    "df_h = pd.DataFrame(df_h)\n",
+    "df_a = pd.DataFrame(df_a)    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
    "outputs": [
