--- a/RN.ipynb
+++ b/RN.ipynb
@@ -1162,6 +1162,7 @@
     "RN = Sequential()\n",
     "RN.add(Dense(5,input_shape = X_train_normalized.shape[1:],activation = 'sigmoid'))\n",
     "RN.add(Dense(5,activation = 'sigmoid'))\n",
+    "RN.add(Dense(5,activation = 'sigmoid'))\n",
     "RN.add(Dense(NumberOfClasses,activation = 'sigmoid'))\n",
     "RN.summary()"
    ]
